--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
----
-layout: home
-author_profile: true
----
+<!DOCTYPE html>
+<html>
+<head>
+  <title>QCQN</title>
+<head>
+<body>
+  <h1>Hello World</h1>
+</body>
+</html>
